<resources>
    <string name="app_name">Events Posgrado</string>
    <!-- <string name="facebook_app_id">1317356271629011</string> -->
    <string name="facebook_app_id">396332600827414</string>
    <string name="fb_login_protocol_scheme">fb396332600827414</string>
    <string name="txtHeadLogin">YOUR ACOOUNT</string>
    <string name="txtSubHeadLogin">Login with:</string>
    <string name="txtComplementLogin">---------- OR ANOTHER ----------</string>
    <string name="txtLoginAccount">CREATE ACCOUNT</string>
    <string name="login_hint_Name">Name User</string>
    <string name="login_hint_email">Email User</string>
    <string name="title_toolbar">toolbar</string>
    <string name="title_NavMenuEvantos">Usuario</string>
    <string name="title_NavMenuInforma">Información</string>
    <string name="title_NavMenuevenConvoca">Eventos/Convocatorias</string>
    <string name="title_NavMenuEnlaces">Enlaces</string>
    <string name="title_NavMenuYoUNAM">Yo UNAM</string>
    <string name="title_NavHeadText">User</string>
    <string name="labelFInicio">Fecha de Inicio:</string>
    <string name="labelHInicio">Hora de inicio</string>
    <string name="labelFFin">Fecha de térmico</string>
    <string name="labelHFin">Hora de término</string>
    <string name="labelLink">Para mayor información visita el siguiente enlace:</string>
    <string name="msj_error_data">There was an error loading data!!!</string>
    <string name="txtShare">Share</string>
    <string name="txtFav">Add Favarities</string>
    <string name="txtCalendar">Add Calendar</string>
    <string name="msjShare">Share event info</string>
    <string name="server_client_id" translatable="false">363120381779-guqfr9dtmv70amrqh1r7qumvn2oa4qck.apps.googleusercontent.com</string>
    <string name="EventCalendarTitle">Event CEP</string>

    <string name="title">About...</string>
    <string name="coordinator1">Coordinador</string>
    <string name="coordinator">Dr. Javier Nieto Gutiérrez</string>
    <string name="twitter">"@"CEPUNAM    </string>
    <string name="facebook">UnamPosgrado</string>
    <string name="ubication">Ubication</string>

</resources>
