<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        android:text= "@string/title"/>

    <ImageView
        android:id="@+id/image_cep"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/unamposgrado"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/coordinator1"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="@color/colorBlue"
        android:text="@string/coordinator1" />

    <TextView
        android:id="@+id/coordinator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="@color/colorBlue"
        android:text="@string/coordinator" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/twitter_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/twitter" />

        <TextView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/twitter" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/facebook_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/facebook" />

        <TextView
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16dp"
            android:text="@string/facebook" />
    </LinearLayout>

    <TextView
        android:id="@+id/ubication"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        android:textColor="@color/colorBlue"
        android:text="@string/ubication" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>


    </LinearLayout>

</LinearLayout>