<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/widthlogologin"
        android:layout_height="97dp"
        fresco:placeholderImage="@drawable/unamposgrado"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/txtHeadLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightTextHeadLogin"
        android:text="@string/txtHeadLogin"
        android:layout_marginBottom="@dimen/marginBottonButtonLogin"
        android:textSize="@dimen/LetterSizeTextHeadLogin"
        android:textStyle="normal|bold"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>
    <TextView
        android:id="@+id/txtSubHeadLogin"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:text="@string/txtSubHeadLogin"
        android:layout_marginBottom="@dimen/marginBottonButtonLogin"
        android:textColor="@color/colortxtOthersLogin"
        android:textSize="@dimen/LetterSizeTextotherLogin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_weight="0.15" />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_buttonFB"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopButtonLogin"
        android:layout_marginBottom="@dimen/marginBottonButtonLogin"
        android:height="@dimen/heightButtonLogin"
        android:layout_height="@dimen/heightButtonLogin"
        android:layout_width="@dimen/widthButtonLogin"/>
    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopButtonLogin"
        android:layout_marginBottom="@dimen/marginBottonButtonLogin"
        android:layout_height="@dimen/heightButtonLogin"
        android:layout_width="@dimen/widthButtonLogin"
        android:layout_centerInParent="true"
        android:textSize="@dimen/LetterSizeTextotherLogin"/>
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopButtonLogin"
        android:layout_marginBottom="@dimen/marginBottonButtonLogin"
        android:layout_height="@dimen/heightButtonLogin"
        android:layout_width="@dimen/widthButtonLogin"
        android:textSize="@dimen/LetterSizeTextotherLogin" />
    <TextView
        android:id="@+id/txtComplementLogin"
        android:layout_width="match_parent"
        android:text="@string/txtComplementLogin"
        android:layout_marginBottom="@dimen/marginBottonButtonLogin"
        android:textColor="@color/colortxtOthersLogin"
        android:textSize="@dimen/LetterSizeTextotherLogin"
        android:layout_marginTop="10dp"
        android:layout_height="@dimen/heightTextotherLogin"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/nameLogin"
        android:layout_width="@dimen/widthEdiTxtLogin"
        android:layout_height="@dimen/heightEdiTxtLogin"
        android:layout_marginTop="@dimen/marginTopButtonLogin"
        android:layout_marginBottom="@dimen/marginBottonButtonLogin"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/sizeEdiTxtLogin"
        android:hint="@string/login_hint_Name"/>
    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="@dimen/widthEdiTxtLogin"
        android:layout_height="@dimen/heightEdiTxtLogin"
        android:layout_marginTop="@dimen/marginTopButtonLogin"
        android:layout_marginBottom="@dimen/marginBottonButtonLogin"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/sizeEdiTxtLogin"
        android:hint="@string/login_hint_email"/>
    <Button
        android:id="@+id/buttonaccount"
        android:layout_width="@dimen/widthEdiTxtLogin"
        android:layout_height="@dimen/heightButtonLogin"
        android:layout_marginTop="@dimen/marginTopButtonLogin"
        android:layout_marginBottom="@dimen/marginBottonButtonLogin"
        android:text="@string/txtLoginAccount"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:background="@color/cardview_dark_background"
        android:textColor="@color/cardview_light_background"
        android:textStyle="normal|bold"/>
</LinearLayout>
</ScrollView>