<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/BarDetails"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.AppBarOverlay">
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/mainLayout"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/detailsTxtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detailsTitleSize"/>
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/detailsImg"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="@dimen/simpleDraweeDetails"
                android:layout_gravity="center_horizontal"
                fresco:actualImageScaleType="fitCenter"/>
            <LinearLayout
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/labelFInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/detailsTxtFInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/labelHInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/detailsTxtHInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/labelFFin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/detailsTxtFFin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/labelHFin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/detailsTxtHFin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                android:id="@+id/labelLinkURL"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/labelLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />
            <TextView
                android:id="@+id/detailsLinkURL"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>